# blive-api-c

./: .gitignore  .gitmodules  .ignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
demo/: a.out  test.c
include/blive_api/: blive_api.h  blive_def.h
source/: blive.c  blive_internal.h  conn.c  conn.h  log.c  msg.c  msg.h
